#
# configure.ac for GribAPI
#

AC_PREREQ(2.59)
AC_INIT([newarkAPI], [5.0.1], [diana@met.no])
AM_INIT_AUTOMAKE([foreign])

AC_CONFIG_MACRO_DIR([m4])

METNO_SET_VERSION_INFO(6.0.0)
METNO_PROG_PKG_CONFIG

AC_PROG_LIBTOOL
AC_SUBST([LIBTOOL_DEPS]) 

AC_PROG_CXX

AC_LANG_PUSH(C++)
AC_CXX_HAVE_STD
AC_CXX_HAVE_STL
AC_LANG_POP([C++])


METNO_ENABLE_CONDITIONAL([SHARED_LIBRARY], [shared])

METNO_REQUIRE_PKG([PUTOOLS],[puTools])

METNO_REQUIRE_PKG([PQXX],[libpqxx])

#METNO_REQUIRE_C_LIBRARY([PQSQL], [pq], [libpq-fe.h], [main])

METNO_REQUIRE_BOOST
METNO_REQUIRE_BOOST_FEATURE([thread])

AC_CONFIG_FILES([
	newarkAPI.pc
	Makefile
])

AC_OUTPUT
